# LogicTreeETC

./: .gitignore  ArrowETC.py  LogicBoxETC.py  LogicTreeETC.py  MANIFEST.in  README.md  diff.txt  pyproject.toml  readthedocs.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md  logictree.rst  modules.rst  requirements.txt
example/: decisionTree.py
examples/: decisionTreeDSAExample.py  decisionTreeExample.py  decisionTreeNTAExample.py
examples/data/: logic_tree_data.csv  temp_by_year.csv
logictree/: ArrowETC.py  LogicBoxETC.py  LogicTreeETC.py  __init__.py  vector_detector.py
tests/: test_logic_box.py  test_logic_tree.py
