[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LogicTreeETC"
version = "0.1.0"
description = "A package for logic trees with ETC features"
authors = [
    { name="E. Tyler Carr", email="carret1268@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"logictree" = ["fonts/*.ttf"]